@@ -1,3 +1,7 @@
+Wed Jul 12 15:57:00 BST 2000 Olly Betts
+
+	* omega: removed some unused system headers
+
 Wed Jul 12 15:25:00 BST 2000 Olly Betts
 
 	* omega: tidied and made more consistent
